src/SamplTrackrGiraffe/yaml/samptrak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampgiraf-svc
  labels:
    app: sampgiraf
spec:
  type: NodePort 
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 9090
    nodePort: 30010
  selector:
    app: sampgiraf
